#5629 Support to configure JVM options for broker and worker (#5630)
The new config "jvm.performance.options" are supported by broker image and worker image. It is useful when you want to turn performance of JVM.

Reviewers: jackyoh <jack@is-land.com.tw>